fixed cart menu that was behind grid element.

--- a/assets/iphone.css
+++ b/assets/iphone.css
@@ -15,7 +15,7 @@ body{
     
     
 }
-
+/* z index here to get product page above images*/
 
 header{
     
@@ -31,6 +31,8 @@ header{
     border-radius: 50px;
     padding-left: 5rem;
     margin: 2rem 10rem 2rem 10rem;
+    position: relative;
+    z-index: 3;
    
     
 
@@ -51,6 +53,8 @@ nav ul{
     justify-content: space-between;
     color: antiquewhite;
     filter:invert(80%);
+    position: relative;
+    z-index: 3;
     
     
     
@@ -157,9 +161,15 @@ img{
   align-items: right;
  justify-content: right;
  width: 100%;
+ position: relative;
+ z-index: -1;
  
  
  
+}
+.grid{
+  position: relative;
+  z-index: -1;
 }
 .photoAd img{
   position: absolute;
@@ -167,8 +177,9 @@ img{
   justify-content: center;
   margin-top: 4rem;
   margin-right: 4rem;
-  z-index: 1;
   
+  
+  z-index: -1;
   
  
   
@@ -189,8 +200,10 @@ img{
   border-radius: 77.57px;
   margin:0 9rem 0 ;
   max-width: 100%;
-  z-index: -1;
+  
   position: relative;
+  z-index: 1;
+  
   
   
   
@@ -198,9 +211,7 @@ img{
 }
 
 
-.grid img{
-  z-index: -1;
-}
+
 .grid h1{
   font-size: 42px;
   display: flex;
@@ -210,6 +221,7 @@ img{
 .box{
   border-radius: 77.57px;
   position: relative;
+  z-index: 1;
   
  
   
@@ -221,7 +233,8 @@ img{
 }
 .box:hover{
   box-shadow: -5px 0 8px 0  rgba(0, 0, 0, .5), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
-  
+  z-index: 1;
+  position: relative;
 }
 #box1{
   
